<resources>
    <string name="app_name">CadApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_sobre">Sobre</string>
    <string name="text1">Nome:</string>
    <string name="text2">Idade:</string>
    <string name="text3">Endereço:</string>
    <string name="answer">Seus dados estão corretos?</string>
    <string name="btYes">SIM</string>
    <string name="btNo">NÃO</string>
    <string name="data2">Felipe Rafael Medeiros - R.A.: 00195182</string>
    <string name="data1">Bruno Borçato Rodrigues - R.A.: 00186300</string>
    <string name="data3">Pedro Eduardo Bonani Santos - R.A.: 00193030</string>
    <string name="course">Sistemas de Informacão - UNIPAR - 2019</string>
    <string name="btSave">SALVAR</string>
</resources>
